# OpenLab

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  launch.py  pyproject.toml  report.py  start.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a3b4c5d6e7f8_add_variant_interpretations.py  a3e7c9d12f01_add_convergence_score.py  b078386f2db8_add_gene_id_to_hypotheses.py  b4c5d6e7f8a9_add_paper_pipeline_runs.py  c4b2e8f73a19_add_simulation_evidence_type.py  d5a1f3e89b02_add_genomes_table.py  e1a2b3c4d5e6_add_agent_tables.py  f2b3c4d5e6f7_add_researchbook_tables.py  f8c66d251166_add_gene_graduation_fields.py
crates/cellforge-engine/: Cargo.toml
crates/cellforge-engine/src/: lib.rs
crates/cellforge-engine/src/coordinator/: engine.rs
crates/cellforge-engine/src/fba/: solver.rs
crates/cellforge-engine/src/ode/: mod.rs  solver.rs  sundials.rs
crates/cellforge-engine/src/ssa/: gillespie.rs  mod.rs  propensity.rs  tau_leaping.rs
crates/cellforge-engine/src/state/: mod.rs  partition.rs  store.rs  topology.rs
crates/cellforge-engine/src/utils/: mod.rs  rng.rs  units.rs
dashboard/: app.py  data.py
dashboard/components/: dna_helix.py  evidence_charts.py  genome_map.py
dashboard/pages/: evidence.py  gene_detail.py  gene_explorer.py  hypotheses.py  overview.py  verification.py
data/: confidence_tiers.json  curated_literature.yaml  curated_reclassifications.yaml  go_ids.txt  go_keyword_map.yaml  mgen_orthologs.yaml
docker/: Dockerfile.gpu
docs/: gene_discovery_system_specification.docx  user-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.js  App.tsx  main.js  store.js  store.ts  styles.css  types.js  types.ts
src/openlab/: __init__.py  config.py  exceptions.py  models.py  registry.py
tests/: conftest.py
tests/fixtures/: mini_growth.csv  mini_syn3a.gb  mini_transposon.tsv
tests/test_agents/: conftest.py  test_agent_models.py  test_critic.py  test_planner.py  test_provenance.py  test_reporter.py  test_retriever.py  test_runner.py  test_synthesizer.py  test_tools.py
tests/test_api/: test_evidence_api.py  test_genes_api.py  test_hypotheses_api.py
tests/test_cellforge/: conftest.py
tests/test_cli/: test_analyze_cli.py  test_genes_cli.py
tests/test_ingestion/: test_genbank.py  test_growth_curves.py  test_transposon.py
tests/test_models/: test_evidence.py  test_gene.py  test_hypothesis.py
tests/test_paper_parser/: conftest.py  test_methods_finder.py  test_methods_parser.py  test_pipeline_mapper.py  test_validator.py  test_yaml_generator.py
tests/test_researchbook/: test_api.py  (+3 more)
(+389 files in other folders)
