[package]
name = "cellforge-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
faer = "0.19"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
thiserror = "2"
